# AgentConstructor

./: .gitignore  AgentConstructor.spec  README.md  outlook_export.json  outlook_export_full.json  pyproject.toml
agent_desktop_constructor/: __init__.py
data/: settings.json
docs/: agent_validation.md  application_bootstrap.md  application_service.md  cli_usage.md  com_architecture.md  desktop_ui.md  human_approvals.md  llm_planner.md  llm_supervised_runtime.md  manual_outlook_com_check.md  onec_readonly_tools.md  outlook_com_worker.md  run_events.md  storage_and_runs.md  tools_browser_onec_llm.md
scripts/: _probe_agent_e2e.py  _probe_inbox_times.py  _probe_outlook.py  build_windows_exe.py  run_agent_cli.py  run_desktop_app.py  smoke_outlook_com_diagnostics.py  smoke_outlook_com_read.py  smoke_outlook_tool_gateway.py  verify_llm_planning.py
tests/: test_agent_application_service.py  test_agent_builder.py  test_agent_builder_extended_tools.py  test_agent_builder_llm_plan.py  test_agent_builder_schedule_agent.py  test_agent_builder_with_llm_planner.py  test_agent_loop_prompts.py  test_agent_loop_runtime.py  test_agent_service_approvals.py  test_agent_service_with_storage.py  test_agent_spec.py  test_agent_validation_required_tools.py  test_agent_validation_service.py  test_anthropic_client.py  test_app_config.py  test_bootstrap.py  test_bootstrap_with_storage.py  test_browser_cdp_worker.py  test_cli_approvals.py  test_cli_commands.py  test_cli_show_events.py  test_cli_storage_commands.py  test_com_availability.py  test_com_backed_tools.py  test_data_requirements.py  (+59 more)
(+117 files in other folders)
